// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons CheckIcon icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #148F39;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 32px;
  height: 32px;
  fill: #148F39;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="flag"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icons CrossIcon icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #D23F2D;
  background-color: #FFE8E5;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-1 svg {
  width: 16px;
  height: 16px;
}

.emotion-1 svg {
  fill: #D23F2D;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-3 {
    max-width: 100%;
  }
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D23F2D;
  vertical-align: unset;
  display: inline-block;
}

.emotion-4.emotion-4 {
  width: 32px;
  height: 32px;
  fill: #D23F2D;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="flag"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icons MoonIcon icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<svg
    class="emotion-0"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Moon icon
    </title>
    <path
      d="M10 2c-1.82 0-3.53.5-5 1.35C7.99 5.08 10 8.3 10 12s-2.01 6.92-5 8.65C6.47 21.5 8.18 22 10 22c5.52 0 10-4.48 10-10S15.52 2 10 2z"
      fill="#358CDE"
      fill-rule="nonzero"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons NullDotIcon icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #E4E4E4;
  vertical-align: unset;
  display: inline-block;
  margin: 0 6px;
}

.emotion-0.emotion-0 {
  width: 12px;
  height: 12px;
  fill: #E4E4E4;
}

<svg
    aria-hidden="true"
    class="emotion-0"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="12"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icons SunIcon icon renders as expected 1`] = `
<DocumentFragment>
  .emotion-0 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<svg
    class="emotion-0"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Sun icon
    </title>
    <path
      d="M6.76 5.309589l-1.8-1.798173-1.41 1.416438 1.79 1.798173L6.76 5.30959zM4 10.995434H1v2.009132h3v-2.009132zM13 1h-2v2.96347h2V1zm7.45 3.927854l-1.41-1.416438-1.79 1.798173 1.41 1.416438 1.79-1.798173zM17.24 18.69041l1.79 1.80822 1.41-1.41644-1.8-1.798173-1.4 1.406393zM20 10.995434v2.009132h3v-2.009132h-3zm-8-5.022831c-3.31 0-6 2.702283-6 6.027397 0 3.325114 2.69 6.027397 6 6.027397S18 15.325114 18 12c0-3.325114-2.69-6.027397-6-6.027397zM11 23h2v-2.96347h-2V23zm-7.45-3.927854l1.41 1.416439 1.79-1.80822-1.41-1.416438-1.79 1.80822z"
      fill="#0A68C1"
      fill-rule="nonzero"
    />
  </svg>
</DocumentFragment>
`;
